<resources>
    <string name="app_name">Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_btn">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="references_file_name">Avengers Preferences</string>
</resources>
